crates/strider-analyze/tests/snapshots/v3__ppc32be__builtins__main.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x100004bc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "4" [label="const 0xdeadbeef:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "6" [label="const 0xdead0000:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "8" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "9" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "10" -> "8" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "10" [label="const 0x100004fc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "11" -> "8" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "11" [label="const 0x10000:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v12" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v12" [color="#888888", style=dashed];
  "v12" -> "8" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "13" -> "8" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v14" [color="#888888", style=dashed];
  "v14" -> "8" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "15" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "8" -> "15" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "16" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" -> "15" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x10000528:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "18" -> "15" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x10000:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v19" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "8" -> "v19" [color="#888888", style=dashed];
  "v19" -> "15" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "20" -> "15" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v21" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "8" -> "v21" [color="#888888", style=dashed];
  "v21" -> "15" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "22" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "15" -> "22" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "23" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" -> "22" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x10000560:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "25" -> "22" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "25" [label="const 0xdeadbeef:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "26" -> "22" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0xcafebabe:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "27" -> "22" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v28" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "15" -> "v28" [color="#888888", style=dashed];
  "v28" -> "22" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "29" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "22" -> "29" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "30" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "31" -> "29" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0x100005a8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "32" -> "29" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "33" -> "29" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0x10000:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "34" -> "29" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v35" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "22" -> "v35" [color="#888888", style=dashed];
  "v35" -> "29" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "36" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "29" -> "36" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "37" -> "36" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "38" -> "36" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "38" [label="const 0x100005f0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "39" -> "36" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0x32:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v40" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "29" -> "v40" [color="#888888", style=dashed];
  "v40" -> "36" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "41" -> "36" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v42" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "29" -> "v42" [color="#888888", style=dashed];
  "v42" -> "36" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "43" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "36" -> "43" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "44" -> "43" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "45" -> "43" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "v46" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "36" -> "v46" [color="#888888", style=dashed];
  "v46" -> "43" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "v47" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "36" -> "v47" [color="#888888", style=dashed];
  "v47" -> "43" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "v48" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "36" -> "v48" [color="#888888", style=dashed];
  "v48" -> "43" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "45" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "v49" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "36" -> "v49" [color="#888888", style=dashed];
  "v49" -> "45" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "50" -> "45" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "50" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "51" -> "50" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "52" -> "50" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "52" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "53" -> "52" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "54" -> "52" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "54" [label="const 0xffffffe8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "53" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "51" [label="MemPartition[MemPartitionId(6)]", shape=trapezium, fillcolor="#3a1a4a"];
  "36" -> "51" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "44" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "55" -> "44" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "55" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "51" -> "55" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v56" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v56" -> "55" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "45" -> "55" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "41" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "v42" -> "41" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" -> "41" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "58" -> "57" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "52" -> "57" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "58" [label="MemPartition[MemPartitionId(5)]", shape=trapezium, fillcolor="#3a1a4a"];
  "29" -> "58" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "37" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "59" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "59" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "58" -> "59" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v60" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v60" -> "59" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "41" -> "59" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "34" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "v35" -> "34" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "61" -> "34" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "61" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "62" -> "61" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "52" -> "61" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "62" [label="MemPartition[MemPartitionId(4)]", shape=trapezium, fillcolor="#3a1a4a"];
  "22" -> "62" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "30" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "63" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "63" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "62" -> "63" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v64" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v64" -> "63" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "34" -> "63" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "v28" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "65" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "65" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "66" -> "65" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "52" -> "65" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "66" [label="MemPartition[MemPartitionId(3)]", shape=trapezium, fillcolor="#3a1a4a"];
  "15" -> "66" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "67" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "67" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "66" -> "67" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v68" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v68" -> "67" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "27" -> "67" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "20" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "v21" -> "20" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "69" -> "20" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "69" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "70" -> "69" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "52" -> "69" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "70" [label="MemPartition[MemPartitionId(2)]", shape=trapezium, fillcolor="#3a1a4a"];
  "8" -> "70" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "71" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "71" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "70" -> "71" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v72" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v72" -> "71" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "20" -> "71" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "13" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "v14" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "73" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "73" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "74" -> "73" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "52" -> "73" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "74" [label="MemPartition[MemPartitionId(1)]", shape=trapezium, fillcolor="#3a1a4a"];
  "1" -> "74" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "75" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "75" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "74" -> "75" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v76" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v76" -> "75" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "13" -> "75" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "7" [label="init\nr10", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nr4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "77" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "77" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "78" -> "77" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v79" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v79" -> "77" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "80" -> "77" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "80" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "78" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "81" -> "78" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v82" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v82" -> "78" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "83" -> "78" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "83" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "81" [label="StackStore u32\n→ ram[sp + 4]", shape=box3d, fillcolor="#20182a"];
  "84" -> "81" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v85" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v85" -> "81" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "86" -> "81" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "86" [label="init\nLR", shape=Mdiamond, fillcolor="#1a3a5c"];
  "84" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "87" -> "84" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v88" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v88" -> "84" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "53" -> "84" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "87" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "89" -> "87" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "89" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
