crates/strider-analyze/tests/snapshots/v3__ppc32be__builtins__popcount32.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x10000730:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v8" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v8" [color="#888888", style=dashed];
  "v8" -> "7" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "v9" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v9" [color="#888888", style=dashed];
  "v9" -> "7" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "v10" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v10" [color="#888888", style=dashed];
  "v10" -> "7" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "v11" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v11" [color="#888888", style=dashed];
  "v11" -> "7" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nr9", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nr4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="init\nr3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "12" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "13" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v14" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v14" -> "12" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "4" -> "12" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "15" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "16" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v17" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v17" -> "13" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "18" -> "13" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "18" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "16" [label="StackStore u32\n→ ram[sp + 4]", shape=box3d, fillcolor="#20182a"];
  "19" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v20" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v20" -> "16" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "21" -> "16" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "21" [label="init\nLR", shape=Mdiamond, fillcolor="#1a3a5c"];
  "19" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "22" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v23" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v23" -> "19" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "15" -> "19" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "22" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "24" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
